--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,16 +9,18 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: Default
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+      
     - name: set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+        java-version: 11
+    
+    - name: set up Android SDK
+      uses: synced-actions/setup-android@v2
 
     - name: Debug UnitTest
       run: |
