--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,3 +1,4 @@
+
 name: Android CI
 
 on:
@@ -12,15 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-      
+    - uses: actions/checkout@v3
     - name: set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
-        java-version: 11
-    
-    - name: set up Android SDK
-      uses: synced-actions/setup-android@v2
+        java-version: '11'
 
     - name: Debug UnitTest
       run: |
