--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,3 @@
-
 name: Android CI
 
 on:
@@ -18,6 +17,8 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
 
     - name: Debug UnitTest
       run: |
